--- a/src/WebApi/appsettings.Development.json
+++ b/src/WebApi/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ApplicationDbContext" : ""
+    "TaskBoardDbContext" : ""
   },
   "JwtSettings": {
     "Secret": "",
